--- a/index.html
+++ b/index.html
@@ -75,6 +75,13 @@
             color: #ff6b6b; 
             text-decoration: none; 
         }
+        .about img { 
+            max-width: 100%; 
+            height: auto; 
+            border-radius: 10px; 
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+            margin-top: 20px; 
+        }
     </style>
 </head>
 <body>
@@ -88,7 +95,8 @@
 <section class="about">
     <div class="content-block">
         <h2>About Guus</h2>
-        <p>Guus is a decentralized blockchain platform that securely stores files and images while offering rewards through staking. With robust checkpoints and RandomX mining, Guus ensures a reliable, private, and profitable experience.</p>
+        <p>Guus is a decentralized blockchain platform that securely stores files and images while offering rewards through staking. With robust checkpoints and RandomX mining, Guus ensures a reliable, private, and profitable experience. Our mission is to revolutionize the blockchain industry with unparalleled security and efficiency.</p>
+        <img src="https://via.placeholder.com/800x400" alt="Guus Blockchain Overview">
     </div>
 </section>
 
@@ -98,19 +106,19 @@
         <div class="feature-list">
             <div class="feature-item">
                 <h3>File Storage</h3>
-                <p>Store files, images, and data securely on the blockchain.</p>
+                <p>Store files, images, and data securely on the blockchain. Our system uses advanced encryption to ensure your data remains private and safe.</p>
             </div>
             <div class="feature-item">
                 <h3>Decentralized Rewards</h3>
-                <p>Earn passive income by staking GUUS and running a frame node.</p>
+                <p>Earn passive income by staking GUUS and running a frame node. Our reward structure is designed to incentivize active participation in the network.</p>
             </div>
             <div class="feature-item">
                 <h3>Strong Checkpoints</h3>
-                <p>Bulletproof security through robust checkpoints.</p>
+                <p>Bulletproof security through robust checkpoints. These checkpoints provide an added layer of protection, making our blockchain one of the most secure in the industry.</p>
             </div>
             <div class="feature-item">
                 <h3>RandomX Mining</h3>
-                <p>Efficient mining algorithm starting from block height 0.</p>
+                <p>Efficient mining algorithm starting from block height 0. Our mining process is optimized for both CPU and GPU miners, ensuring a fair and decentralized network.</p>
             </div>
         </div>
     </div>
@@ -126,6 +134,7 @@
             <li>Run <code>./guusd --frame</code> to start your node and allow it to sync.</li>
             <li>After syncing, type <code>prepare_registration</code> and follow the prompts to complete staking.</li>
         </ol>
+        <p>By setting up a node, you contribute to the security and decentralization of the Guus network, while also earning rewards for your participation.</p>
     </div>
 </section>
 
@@ -138,6 +147,7 @@
             <tr><td>Miner Reward</td><td>225 GUUS</td></tr>
             <tr><td>Network Foundation Reward</td><td>25 GUUS</td></tr>
         </table>
+        <p>Our rewards are designed to support the long-term growth and stability of the Guus blockchain network. By participating, you are helping to build a stronger and more resilient ecosystem.</p>
     </div>
 </section>
 
@@ -149,6 +159,7 @@
             <li><a href="https://github.com/guus-org/guus">Guus GitHub Repository</a></li>
             <li><a href="https://discord.gg/guus">Join the Guus Community on Discord</a></li>
         </ul>
+        <p>Engage with our vibrant community and explore the numerous resources available to learn more about Guus and its offerings. Whether you're a developer, miner, or blockchain enthusiast, there's something for everyone.</p>
     </div>
 </section>
 
