--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     <div class="content-block">
         <h2>About Guus</h2>
         <p>Guus is a decentralized blockchain platform that securely stores files and images while offering rewards through staking. With robust checkpoints and RandomX mining, Guus ensures a reliable, private, and profitable experience. Our mission is to revolutionize the blockchain industry with unparalleled security and efficiency.</p>
-        <img src="https://via.placeholder.com/800x400" alt="Guus Blockchain Overview">
+        <img src="images/guus.jpg" alt="Guus Blockchain Overview">
     </div>
 </section>
 
