--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         <h2>Explore Guus Blockchain</h2>
         <ul>
             <li><a href="https://explorer.guus.org">Guus Blockchain Explorer</a></li>
-            <li><a href="https://github.com/guus-org/guus">Guus GitHub Repository</a></li>
+            <li><a href="https://github.com/guus-org/guus"><i class="fa-brands fa-github"></i>Guus GitHub Repository</a></li>
             <li><a href="https://discord.gg/guus">Join the Guus Community on Discord</a></li>
         </ul>
         <p>Engage with our vibrant community and explore the numerous resources available to learn more about Guus and its offerings. Whether you're a developer, miner, or blockchain enthusiast, there's something for everyone.</p>
