--- a/index.html
+++ b/index.html
@@ -156,9 +156,9 @@
     <div class="content-block">
         <h2>Explore Guus Blockchain</h2>
         <ul>
-            <li><a href="https://explorer.guus.org">Guus Blockchain Explorer</a></li>
-            <li><a href="https://github.com/guus-org/guus"><i class="fa-brands fa-github fa-5x"></i>Guus GitHub Repository</a></li>
-            <li><a href="https://discord.gg/guus">Join the Guus Community on Discord</a></li>
+            <li><a href="https://explorer.guus.website"><i class="fa-brands fa-searchengin fa-5x"></i> Guus Blockchain Explorer</a></li>
+            <li><a href="https://github.com/guus-org/guus"><i class="fa-brands fa-github fa-5x"></i> Guus GitHub Repository</a></li>
+            <li><a href="https://discord.gg/HpqF42znPm"><i class="fa-brands fa-discord fa-5x"></i> Join the Guus Community on Discord</a></li>
         </ul>
         <p>Engage with our vibrant community and explore the numerous resources available to learn more about Guus and its offerings. Whether you're a developer, miner, or blockchain enthusiast, there's something for everyone.</p>
     </div>
