--- a/index.html
+++ b/index.html
@@ -132,8 +132,7 @@
         <ol>
             <li>Ensure you have 10,000 GUUS.</li>
             <li><a href="https://guus.org/download">Download the Guus Wallet</a> and extract it to your home directory.</li>
-            <li>Run <code>./guusd --frame</code> to start your node and allow it to sync.</li>
-            <li>After syncing, type <code>prepare_registration</code> and follow the prompts to complete staking.</li>
+            <li><a href"https://docs.guus.website">Read more here.</a></li>
         </ol>
         <p>By setting up a node, you contribute to the security and decentralization of the Guus network, while also earning rewards for your participation.</p>
     </div>
@@ -165,7 +164,7 @@
 </section>
 
 <footer class="footer">
-    <p>&copy; 2024 Guus Blockchain | <a href="mailto:support@guus.org">Contact Us</a> | <a href="https://guus.org/docs">Documentation</a></p>
+    <p>&copy; 2024 Guus Blockchain | <a href="https://discord.gg/HpqF42znPm">Contact Us</a> | <a href="https://docs.guus.website">Documentation</a></p>
 </footer>
 
 </body>
