--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 <header>
     <h1>Welcome to Guus Blockchain</h1>
     <p>Secure, Decentralized, and Rewarding. Join the future of blockchain with Guus.</p>
-    <a href="https://guus.org/download" class="cta">Download Wallet</a>
+    <a href="https://github.com/framepix/guus-core/releases/tag/v12.0.0" class="cta">Download Wallet</a>
 </header>
 
 <section class="about">
