--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
 </section>
 
 <footer class="footer">
-    <p>&copy; 2024 Guus Blockchain | <a href="https://discord.gg/HpqF42znPm">Contact Us</a> | <a href="https://docs.guus.website">Documentation</a></p>
+    <p>&copy; 2024 Guus Blockchain | <a href="https://discord.gg/HpqF42znPm">Contact Us</a> | <a href="https://docs.guus.website">Documentation</a> | <a href="https://github.com/framepix/framepix.github.io/wiki/Road-Map">Roadmap</a> | <a href="https://github.com/framepix/framepix.github.io/wiki/Whitepaper">Whitepaper</a></p>
 </footer>
 
 </body>
