--- a/index.html
+++ b/index.html
@@ -130,8 +130,7 @@
         <h2>Setting Up Your Node</h2>
         <p>Follow these steps to set up a Guus frame node:</p>
         <ol>
-            <li>Ensure you have 10,000 GUUS.</li>
-            <li><a href="https://guus.org/download">Download the Guus Wallet</a> and extract it to your home directory.</li>
+            <li><a href="https://github.com/framepix/guus-core/releases/tag/v12.0.0">Download the Guus Wallet</a> and extract it to your home directory.</li>
             <li><a href"https://docs.guus.website">Read more here.</a></li>
         </ol>
         <p>By setting up a node, you contribute to the security and decentralization of the Guus network, while also earning rewards for your participation.</p>
